[gd_scene load_steps=3 format=3 uid="uid://sobivcwbjq2t"]

[ext_resource type="Script" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/Database_Browser/popup_newKey.gd" id="1_0lrqy"]
[ext_resource type="PackedScene" uid="uid://b2dogu4xneier" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_Text.tscn" id="2_5i1la"]

[node name="popup_newKey" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0lrqy")

[node name="PanelContainer" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.631373)

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -74.0
offset_right = 250.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2

[node name="Input_Text" parent="PanelContainer/VBoxContainer" instance=ExtResource("2_5i1la")]
layout_mode = 2
label_text = "New Key Display Name"
is_label_button = false

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Accept" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Accept"

[node name="Cancel" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[editable path="PanelContainer/VBoxContainer/Input_Text"]
